         LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT and
         LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG (Fred).
20110427 tape.c,test/test15.c: use centralised methods for ms/tstate conversions
         (Fred).
20110427 tape.c,test/test15.c: use more centralised methods for ms/tstate
         conversions (Fred).
20110427 z80.c: initialise machine_type to avoid a warning (Fred).
20110427 test/test.c: test needed updating for ROM block duration fix (Fred).
20110427 tzx_read.c: message time in the TZX is in seconds not ms (Fred).
20110427 doc/libspectrum.txt,tape.c,tape_accessors.txt,tape_block.[ch],
         utilities.c: directly store pause tstates values in blocks to allow
         access to either original values or native tstates values (Fred).
20110427 Makefile.am,doc/{libspectrum.3,libspectrum.txt},internals.h,
         libspectrum.c,libspectrum.h.in,pzx_read.c,tap.c,tape.c,
         tape_accessors.txt,tape_block.[ch],tzx_read.c: add read support for PZX
         tape files (Fred).
20110429 wav.c: use some more LIBSPECTRUM_BITS_IN_BYTE constants (Fred).
20110429 tape.c: have raw data blocks report the polarity of pulses (Fred).
20110502 configure.in: remove unneeded AM_SUBST_NOTMAKE macro as it doesn't get
         along with older autotools (patch #3295662) (thanks, Tomáš Franke)
         (Sergio Baldoví).
20110514 doc/libspectrum.txt,libspectrum.h.in,tape.c,tape_accessors.txt,
         tape_block.[ch],tzx_read.c,tzx_write.c: add support for the TZX set
         signal level block (Fred).
20110514 tape.c,tzx_read.c: tweak set signal level and pause blocks to correct
         level information (Fred).
20110514 tzx_write.c: add support for writing PZX blocks to TZX files (Fred).
20110515 tap.c: add support for the TZX set signal level block (Fred).
20110515 tzx_write.c: factor out common code for writing signal level and pure
         tone blocks (Fred).
20110608 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: beginnings of
         Spectranet snapshot support.