@@ -192,8 +192,11 @@ static const libspectrum_word ZXSTDIVIDE_COMPRESSED = 4;
 #define ZXSTBID_DIVIDERAMPAGE "DIRP"
 
 #define ZXSTBID_SPECTRANET "SNET"
-static const libspectrum_word ZXSTSNET_ALL_DISABLED = 1;
-static const libspectrum_word ZXSTSNET_RST8_DISABLED = 2;
+static const libspectrum_word ZXSTSNET_PAGED = 1;
+static const libspectrum_word ZXSTSNET_ALL_DISABLED = 2;
+static const libspectrum_word ZXSTSNET_RST8_DISABLED = 4;
+static const libspectrum_word ZXSTSNET_FLASH_COMPRESSED = 8;
+static const libspectrum_word ZXSTSNET_RAM_COMPRESSED = 16;
 
 static libspectrum_error
 read_chunk( libspectrum_snap *snap, libspectrum_word version,
@@ -284,7 +287,7 @@ write_drum_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
 		  size_t *length, libspectrum_snap *snap );
 static libspectrum_error
 write_snet_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
-		  size_t *length, libspectrum_snap *snap );
+		  size_t *length, libspectrum_snap *snap, int compress );
 
 #ifdef HAVE_ZLIB_H
 
@@ -1903,25 +1906,112 @@ read_dirp_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
 }
 
 static libspectrum_error
+read_snet_memory( libspectrum_snap *snap, const libspectrum_byte **buffer,
+  int compressed, size_t *data_remaining,
+  void (*setter)(libspectrum_snap*, int, libspectrum_byte*) )
+{
+  size_t data_length, uncompressed_length = 0;
+  libspectrum_error error;
+  libspectrum_byte *data_out, *uncompressed_data;
+  const libspectrum_byte *data;
+
+  if( *data_remaining < 4 ) {
+    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+      "%s:read_snet_memory: not enough data for length", __FILE__ );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+  }
+
+  data_length = libspectrum_read_dword( buffer );
+  *data_remaining -= 4;
+
+  if( *data_remaining < data_length ) {
+    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+      "%s:read_snet_memory: not enough data", __FILE__ );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+  }
+  *data_remaining -= data_length;
+
+  if( compressed ) {
+
+#ifdef HAVE_ZLIB_H
+
+    error = libspectrum_zlib_inflate( *buffer, data_length, &uncompressed_data,
+        &uncompressed_length );
+    if( error ) return error;
+
+    *buffer += data_length;
+
+    if( uncompressed_length != 0x20000 ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+          "%s:read_snet_memory: data decompressed to %lu but should be 0x20000",
+          __FILE__, (unsigned long)uncompressed_length );
+      libspectrum_free( uncompressed_data );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    data = uncompressed_data;
+
+#else
+
+    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+        "%s:read_snet_memory: zlib needed for decompression\n", __FILE__ );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+
+#endif
+
+  } else {
+    if( data_length != 0x20000 ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+          "%s:read_snet_memory: data has length %lu but should be 0x20000",
+          __FILE__, (unsigned long)data_length );
+      return LIBSPECTRUM_ERROR_NONE;
+    }
+
+    data = *buffer;
+    *buffer += data_length;
+  }
+
+  data_out = libspectrum_malloc( 0x20000 );
+  memcpy( data_out, data, 0x20000 );
+  setter( snap, 0, data_out );
+
+  return LIBSPECTRUM_ERROR_NONE;
+}
+
+static libspectrum_error
 read_snet_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
 		 const libspectrum_byte **buffer,
 		 const libspectrum_byte *end GCC_UNUSED, size_t data_length,
                  szx_context *ctx GCC_UNUSED )
 {
   libspectrum_word flags;
-
-  if( data_length != 2 ) {
-    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
-			     "read_snet_chunk: unknown length %lu",
-			     (unsigned long)data_length );
-    return LIBSPECTRUM_ERROR_UNKNOWN;
-  }
+  int flash_compressed, ram_compressed;
+  libspectrum_error error;
+  size_t data_remaining;
 
   libspectrum_snap_set_spectranet_active( snap, 1 );
 
   flags = libspectrum_read_word( buffer );
+  libspectrum_snap_set_spectranet_paged( snap, flags & ZXSTSNET_PAGED );
   libspectrum_snap_set_spectranet_all_traps_disabled( snap, flags & ZXSTSNET_ALL_DISABLED );
   libspectrum_snap_set_spectranet_rst8_trap_disabled( snap, flags & ZXSTSNET_RST8_DISABLED );
+  flash_compressed = flags & ZXSTSNET_FLASH_COMPRESSED;
+  ram_compressed = flags & ZXSTSNET_RAM_COMPRESSED;
+
+  libspectrum_snap_set_spectranet_page_a( snap, **buffer ); (*buffer)++;
+  libspectrum_snap_set_spectranet_page_b( snap, **buffer ); (*buffer)++;
+
+  data_remaining = data_length - 4;
+
+  error = read_snet_memory( snap, buffer, flash_compressed, &data_remaining,
+    libspectrum_snap_set_spectranet_flash );
+  if( error )
+    return error;
+
+  error = read_snet_memory( snap, buffer, ram_compressed, &data_remaining,
+    libspectrum_snap_set_spectranet_ram );
+  if( error )
+    return error;
 
   return LIBSPECTRUM_ERROR_NONE;
 }
@@ -2328,7 +2418,7 @@ libspectrum_szx_write( libspectrum_byte **buffer, size_t *length,
   }
 
   if( libspectrum_snap_spectranet_active( snap ) ) {
-    error = write_snet_chunk( buffer, &ptr, length, snap );
+    error = write_snet_chunk( buffer, &ptr, length, snap, compress );
     if( error ) return error;
   }
 
@@ -3491,18 +3581,91 @@ write_dirp_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
 
 static libspectrum_error
 write_snet_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
-		  size_t *length, libspectrum_snap *snap )
+		  size_t *length, libspectrum_snap *snap, int compress )
 {
-  libspectrum_word flags;
+#ifdef HAVE_ZLIB_H
+  libspectrum_error error;
+#endif
 
-  write_chunk_header( buffer, ptr, length, ZXSTBID_SPECTRANET, 2 );
+  size_t flash_length;
+  libspectrum_byte *flash_data;
+  libspectrum_byte *compressed_flash_data = NULL;
+  int flash_compressed = 0;
 
-  flags = 0;
+  size_t ram_length;
+  libspectrum_byte *ram_data;
+  libspectrum_byte *compressed_ram_data = NULL;
+  int ram_compressed = 0;
+
+  size_t block_size;
+  libspectrum_word flags = 0;
+
+  flash_data = libspectrum_snap_spectranet_flash( snap, 0 );
+  flash_length = 0x20000;
+
+  ram_data = libspectrum_snap_spectranet_ram( snap, 0 );
+  ram_length = 0x20000;
+
+#ifdef HAVE_ZLIB_H
+
+  if( compress ) {
+    size_t compressed_length;
+
+    error = libspectrum_zlib_compress( flash_data, flash_length,
+      &compressed_flash_data, &compressed_length );
+    if( error ) return error;
+
+    if( compress & LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS ||
+      compressed_length < flash_length ) {
+      flash_compressed = 1;
+      flash_data = compressed_flash_data;
+      flash_length = compressed_length;
+    }
+
+    error = libspectrum_zlib_compress( ram_data, ram_length,
+      &compressed_ram_data, &compressed_length );
+    if( error ) return error;
+
+    if( compress & LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS ||
+      compressed_length < flash_length ) {
+      ram_compressed = 1;
+      ram_data = compressed_ram_data;
+      ram_length = compressed_length;
+    }
+  }
+
+#endif
+
+  block_size = 12 + flash_length + ram_length;
+
+  write_chunk_header( buffer, ptr, length, ZXSTBID_SPECTRANET, block_size );
+
+  if( libspectrum_snap_spectranet_paged( snap ) )
+    flags |= ZXSTSNET_PAGED;
   if( libspectrum_snap_spectranet_all_traps_disabled( snap ) )
     flags |= ZXSTSNET_ALL_DISABLED;
   if( libspectrum_snap_spectranet_rst8_trap_disabled( snap ) )
     flags |= ZXSTSNET_RST8_DISABLED;
+  if( flash_compressed )
+    flags |= ZXSTSNET_FLASH_COMPRESSED;
+  if( ram_compressed )
+    flags |= ZXSTSNET_RAM_COMPRESSED;
   libspectrum_write_word( ptr, flags );
+
+  *(*ptr)++ = libspectrum_snap_spectranet_page_a( snap );
+  *(*ptr)++ = libspectrum_snap_spectranet_page_b( snap );
+
+  libspectrum_write_dword( ptr, flash_length );
+  memcpy( *ptr, flash_data, flash_length ); *ptr += flash_length;
+
+  libspectrum_write_dword( ptr, ram_length );
+  memcpy( *ptr, ram_data, ram_length ); *ptr += ram_length;
+
+  if( flash_compressed )
+    libspectrum_free( compressed_flash_data );
+
+  if( ram_compressed )
+    libspectrum_free( compressed_ram_data );
 
   return LIBSPECTRUM_ERROR_NONE;
 }
